Correction de contraste du footer

--- a/style.css
+++ b/style.css
@@ -801,7 +801,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #f6783e;
 }
 #p_invitation
 {
@@ -902,9 +902,10 @@ h4 {
 }
 .footer-p
 {
-    font-size: 16px;
+    font-size: 18px;
     color: white;
     margin-top: 10px;
+    font-weight: 500;
 }
 .col-sm-4 ul
 {
